# tap-sharedparentcontext

./: .pre-commit-config.yaml  LICENSE  README.md  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: build.yml  test.yml
tap_sharedparentcontext/: __init__.py  __main__.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
